[package]
name = "resource-grab"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "resource-grab"
path = "bin/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dirs = "5.0.1"
reqwest = { version = "0.11.23", features = ["blocking", "json", "multipart"] }
scraper = "0.19.0"
thiserror = "1.0.57"
regex = "1.10.2"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
async-recursion = "1.0.5"
url = { version = "2.5.0", features = ["serde"] }
chrono = "0.4.38"
job_scheduler = "1.2.1"
tokio-cron-scheduler = "0.10.2"
serde_json = "1.0.117"
encoding_rs = "0.8.34"
serde_urlencoded = "0.7.1"
percent-encoding = { version = "2.3.1", features = ["default"] }
